--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"gulp-svgstore": "^9.0.0",
 		"gulp-terser": "^2.0.0",
 		"sass": "^1.75.0",
+		"sharp": "^0.34.5",
+		"through2": "^4.0.2",
 		"ttf2eot": "^2.0.0",
 		"ttf2woff": "^2.0.2",
 		"ttf2woff2": "^4.0.5"
